examples/https-gateway/secret.yaml

---

apiVersion: v1
kind: Namespace
metadata:
  name: abcd

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: rg-tls
  namespace: abcd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  to:
    - group: ""
      kind: Secret
      # name: test-service
