examples/https-gateway/gatewayapis.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: bigip
spec:
  controllerName: f5.io/gateway-controller-name


---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygateway
spec:
  gatewayClassName: bigip
  listeners:
  - name: listenerx
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
        - name: mytls
          namespace: abcd
  addresses:
    - value: 10.250.17.143

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myroute
spec:
  parentRefs:
    - name: mygateway
      sectionName: listenerx
      namespace: default
  hostnames:
    - gateway.api
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /path-test
      backendRefs:
        - namespace: default
          name: test-service
          port: 80
